# maui

./: .dockerignore  .env.example  .gitignore  Dockerfile  Justfile  README.md  docker-compose-dev.yml  docker-compose.portainer.yaml  docker-compose.yml  pyproject.toml
scripts/: manual_verify.py  verify_db_delete.py
src/: main.py  migrate_db.py  migrate_recurrence.py  update_colors.py
src/bot/: handlers.py
src/database/: access.py  core.py  models.py
src/services/: coordinator.py  gemini.py  groq_provider.py  llm_provider.py  notification_service.py  scheduler.py
src/tools/: admin.py  (+8 more)
tests/: conftest.py  test_app_scripts.py  test_auth.py  test_config.py  test_config_extended.py  test_coordinator.py  test_coordinator_extended.py  test_coordinator_extended_2.py  test_coordinator_extended_3.py  test_coordinator_extended_4.py  test_coverage_gap_fill.py  test_coverage_migrations_bot.py  test_coverage_routers.py  test_coverage_services.py  test_coverage_users_auth.py  test_database.py  test_database_core.py  test_db_access_coverage.py  test_deadline_notifications.py  test_final_access.py  test_final_coverage.py  test_formatters.py  test_formatting_fix.py  test_gemini.py  test_groq_provider.py  test_handlers.py  test_handlers_extended.py  test_llm_factory.py  test_main.py  test_migration.py  test_recurrence.py  test_repository_access.py  test_repository_coverage_gap.py  test_repository_edge.py  test_repository_exceptions_2.py  test_repository_extended.py  test_repository_filters.py  test_repository_final_coverage.py  test_repository_lists.py  test_scheduler.py  (+11 more)
(+17 files in other folders)
